--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,7 @@ backgroundColor="#D2D0D0"
 secondaryBackgroundColor="#FFFFFF"
 textColor="#515149"
 font="sans-serif"
+
+[logger]
+level="info"
+messageFormat="%(asctime)s %(levelname)s %(message)s"
